css/style.css
/* ... */
.introjs-tooltip{
max-width: 40vw;;
}


.introjs-skipbutton{
  /* width:25px;
  height: 25px; */
  top:-.7em;
  right:-.5em;
}

.introjs-tooltiptext {
  font-size: small;
  padding:.5em;
}

.introjs-tooltipbuttons{
  font-family: "Source Sans Pro", sans-serif;
  background: rgba(26, 24, 24, 0.9);
  padding: 0;
  font-size: 12pt;
  border:0px solid #83828271;
}
.introjs-button{
  font-family: "Source Sans Pro", sans-serif;
  padding-top:0;
  margin-top:0.7em;
  margin-bottom:.5em;
  margin-right:1em;
  margin-left:1em;
  border:1px solid #83828271;
  
}

.introjs-fixedTooltip{
  background: rgba(26, 24, 24, 0.0);
  border:2px solid #ffffffc7;
}

.grecaptcha-badge { 
  bottom:30px !important; 
}

